--- a/trab3/ex1/ex1-deadlock/makefile
+++ b/trab3/ex1/ex1-deadlock/makefile
@@ -1,1 +1,12 @@
+CC = gcc
+CFLAGS = -Wall -g
 
+BINS = ex1-deadlock
+
+all: $(BINS)
+
+ex1-deadlock: ex1-deadlock.o
+ex1-deadlock.o: ex1-deadlock.c
+
+clean:
+	$(RM) $(BINS) *.o
